# ray-tracer

./: .gitignore  CMakeLists.txt
src/: cmd.cpp  cmd.h  common.h  main.cpp  obj.cpp  obj.h  vec3.cpp  vec3.h
